--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,16 @@
 {
-  "printWidth": 100,
-  "endOfLine": "auto",
-  "bracketSameLine": true,
-  "arrowParens": "avoid",
-  "plugins": ["prettier-plugin-svelte"],
-  "overrides": [
-    {
-      "files": "*.svelte",
-      "options": {
-        "parser": "svelte"
-      }
-    }
-  ]
+    "printWidth": 100,
+    "endOfLine": "auto",
+    "bracketSameLine": true,
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "plugins": ["prettier-plugin-svelte"],
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
+        }
+    ]
 }
