--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "devDependencies": {
         "@commitlint/cli": "^17.7.2",
         "@commitlint/config-conventional": "^17.7.0",
+        "@iconify-json/material-symbols": "^1.1.59",
+        "@iconify-json/mdi": "^1.1.54",
         "@sveltejs/adapter-static": "1.0.0-next.50",
         "@sveltejs/kit": "^1.25.2",
         "@typescript-eslint/eslint-plugin": "^6.7.5",
@@ -35,6 +37,7 @@
         "svelte-check": "^3.5.2",
         "tslib": "^2.6.2",
         "typescript": "^5.2.2",
+        "unplugin-icons": "^0.17.0",
         "vite": "^4.4.11"
     },
     "config": {
