--- a/.github/workflows/dependabot-auto.yml
+++ b/.github/workflows/dependabot-auto.yml
@@ -9,11 +9,30 @@ jobs:
         runs-on: ubuntu-latest
         if: ${{ github.actor == 'dependabot[bot]' }}
         steps:
-            - name: Dependabot metadata
-              id: metadata
-              uses: dependabot/fetch-metadata@v1
+            - uses: actions/checkout@v3
               with:
-                  github-token: "${{ secrets.GITHUB_TOKEN }}"
+                  fetch-depth: 0
+
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
+
+            - name: Install pnpm
+              uses: pnpm/action-setup@v2
+              with:
+                  version: ${{ vars.PNPM_MAJOR }}
+
+            - name: Sync node version and setup cache
+              uses: actions/setup-node@v3
+              with:
+                  node-version: lts/*
+                  cache: pnpm
+
+            - name: Install dependencies
+              run: pnpm install -D
+
+            - name: Build site
+              run: pnpm build
 
             - name: Approve a PR
               run: gh pr review --approve "$PR_URL"
