feat: update astro to match old website

--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "gyoge-com",
-  "version": "1.2.2",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^4.15.6",
-    "typescript": "^5.6.2",
-    "@types/bun": "latest"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@typescript-eslint/parser": "^8.5.0",
-    "eslint": "^9.10.0",
-    "eslint-plugin-astro": "^1.2.4",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-svelte": "^3.2.6"
-  },
-  "module": "index.ts",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+    "name": "gyoge-com",
+    "version": "1.2.2",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "lint": "prettier --check . && eslint .",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@iconify-json/mdi": "^1.2.0",
+        "@types/bun": "latest",
+        "astro": "^4.15.6",
+        "astro-icon": "^1.1.1",
+        "typescript": "^5.6.2"
+    },
+    "devDependencies": {
+        "@astrojs/check": "^0.9.3",
+        "@typescript-eslint/parser": "^8.5.0",
+        "eslint": "^9.10.0",
+        "eslint-plugin-astro": "^1.2.4",
+        "eslint-plugin-jsx-a11y": "^6.10.0",
+        "prettier": "^3.3.3",
+        "prettier-plugin-astro": "^0.14.1",
+        "prettier-plugin-svelte": "^3.2.6"
+    },
+    "module": "index.ts",
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    }
 }
